--- a/index.html
+++ b/index.html
@@ -11,8 +11,61 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a id = "home-nav-item" class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a id="form-nav-item" class="nav-link" href="#">Form</a>
+              </li>
+              <li class="nav-item">
+                <a id="form-data-item" class="nav-link" href="#">Data</a>
+              </li>
+              <li class="nav-item">
+                <a id="form-map-item" class="nav-link" href="#">Map</a>
+              </li>
+              <li class="nav-item">
+                <a id="form-about-item" class="nav-link" href="#">About</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
+      <!-- Main container -->
+      <div id="body-container" class="container">
+
+      </div>
+
+
+    <script>
+      // main body container that encapsulates the content for each screen
+      var bodyContainer = document.querySelector("#body-container");
+
+      var loadHomeScreen = function() {
+        //description that will be displayed on the Home screen
+        var description = document.createElement("p");
+        description.innerText = "insert description here";
+        bodyContainer.appendChild(description);
+      }
+      
+      //When the page loads mark the home nav item as active.
+      //Dinamically display a description of what the app does.
+      window.onload = function() {
+        document.querySelector("#home-nav-item").classList.add("active");
+        loadHomeScreen();
+      }
+
+
+    </script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
